Updated user- and developerdocumentation

--- a/html/inherits.html
+++ b/html/inherits.html
@@ -135,27 +135,12 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <tr><td><img src="inherit_graph_8.png" border="0" alt="" usemap="#SWE__Scenario"/>
 <map name="SWE__Scenario" id="SWE__Scenario">
 <area shape="rect" id="node1" href="classSWE__Scenario.html" title="This class sets the standart layout for all simulateable scenarios. " alt="" coords="5,5,116,32"/>
-<area shape="rect" id="node2" href="classSWE__RadialDamBreakScenario.html" title="scenario is a test environment for the apps later wave&#45;positioninig and its influence on the surround..." alt="" coords="164,5,375,32"/>
+<area shape="rect" id="node2" href="classSWE__FlatScenario.html" title="scenario is a test environment that simulates a flat water&#45;surface " alt="" coords="164,5,297,32"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_9.png" border="0" alt="" usemap="#WavePropagation"/>
 <map name="WavePropagation" id="WavePropagation">
 <area shape="rect" id="node1" href="classWavePropagation.html" title="Abstract wave propagation solver for the Shallow Water Equations; T should be double or float;..." alt="" coords="5,5,131,32"/>
-</map>
-</td></tr>
-<tr><td><img src="inherit_graph_10.png" border="0" alt="" usemap="#wavesimulator_8MainActivity"/>
-<map name="wavesimulator_8MainActivity" id="wavesimulator_8MainActivity">
-<area shape="rect" id="node2" href="classwavesimulator_1_1MainActivity.html" title="This class handles the main&#45;Activities. " alt="" coords="188,5,371,32"/>
-</map>
-</td></tr>
-<tr><td><img src="inherit_graph_11.png" border="0" alt="" usemap="#wavesimulator_8WaveView"/>
-<map name="wavesimulator_8WaveView" id="wavesimulator_8WaveView">
-<area shape="rect" id="node2" href="classwavesimulator_1_1WaveView.html" title="This class is responsible for the Wave visualization. " alt="" coords="104,5,277,32"/>
-</map>
-</td></tr>
-<tr><td><img src="inherit_graph_12.png" border="0" alt="" usemap="#wavesimulator_8WaveViewTouchListener"/>
-<map name="wavesimulator_8WaveViewTouchListener" id="wavesimulator_8WaveViewTouchListener">
-<area shape="rect" id="node2" href="classwavesimulator_1_1WaveViewTouchListener.html" title="class implemets the recation of the displayed content to the users touch&#45;inputs " alt="" coords="201,49,411,90"/>
 </map>
 </td></tr>
 </table>
